@@ -5,7 +5,8 @@ v0.10.3 ()
 	resource clashes
 	* is_virtual fact
 	* new stdlib functions: flatten, str2bool, validate_absolute_path
-	* Hiera support !
+	* Hiera support. String interpolation in the data files, hash and array
+	lookups are not supported yet
   Bugs fixed
 	* Deserialization problems with puppetDBs
 	* Fixed several bugs with imported resources
